# Ubot3D

./: .gitignore  CE3_mandoblasterlow.gcode  GCodeGeometry.cpp  GCodeGeometry.h  MainMenu.qml  ModelControls.qml  Node091_W_Aya_100K.qml  PickArea.qml  PickDebugs.qml  PointModel.qml  README.md  TEST — kopia.gcode  TEST.gcode  Ubot3D.pro  Ubot3DCameraWasdController.qml  Ubot3D_en_150.ts  UbotWasdController.qml  ValueEditSlider.qml  examplegeometry.cpp  examplegeometry.h  main.cpp  main.qml  qml.qrc  slicerParamsDefault.json  slicerParamsModified.json
src/cpp/: Chronograph.cpp  Chronograph.h  CommonDefs.h  Edge.cpp  Edge.h  Extrusion.cpp  Extrusion.h  FileImportExport.cpp  FileImportExport.h  GCodeGeometry.cpp  GCodeGeometry.h  GCodeProgramGenerator.cpp  GCodeProgramGenerator.h  GCodeProgramParser.cpp  GCodeProgramParser.h  GCodeProgramProcessor.cpp  GCodeProgramProcessor.h  Helpers3D.cpp  Helpers3D.h  Layer.cpp  Layer.h  NaivePerimeterGenerator.cpp  NaivePerimeterGenerator.h  NaiveSlicer.cpp  NaiveSlicer.h  NaiveSlicerHeaders.h  PolygonTriangulation.cpp  PolygonTriangulation.h  ProcessLauncher.cpp  ProcessLauncher.h  SimplexGeometry.cpp  SimplexGeometry.h  SlicerParams.cpp  SlicerParams.h  TriangleConnectivity.cpp  TriangleConnectivity.h  TriangleGeometry.cpp  TriangleGeometry.h  Utils.cpp  Utils.h  (+3 more)
src/qml/: GCodeGeometryRepeaterModelDelegate.qml  HelperFunctions.js  MainMenu.qml  ModelControls.qml  ModelGroupDrag.qml  Node091_W_Aya_100K.qml  ParamControl.qml  ParamGroupEdit.qml  ParamRowElement.qml  (+19 more)
test/Ubot3D_test/: CMakeLists.txt  GCodeProgramGenerator_test.cpp
